crates/strata-kernel/tests/ui/claim_has_no_fence.stderr
error[E0609]: no field `resource_tokens` on type `ClaimHandle`
 --> tests/ui/claim_has_no_fence.rs:4:25
  |
4 |     let _tokens = claim.resource_tokens;
  |                         ^^^^^^^^^^^^^^^ unknown field
  |
  = note: available fields are: `claim_id`, `change_set_id`, `offer_id`, `service_epoch`, `graph_generation` ... and 5 others

error[E0609]: no field `delta` on type `ClaimHandle`
 --> tests/ui/claim_has_no_fence.rs:5:24
  |
5 |     let _delta = claim.delta;
  |                        ^^^^^ unknown field
  |
  = note: available fields are: `claim_id`, `change_set_id`, `offer_id`, `service_epoch`, `graph_generation` ... and 5 others

error[E0599]: no method named `publish` found for struct `ClaimHandle` in the current scope
 --> tests/ui/claim_has_no_fence.rs:6:11
  |
6 |     claim.publish();
  |           ^^^^^^^ method not found in `ClaimHandle`
